--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
       img {
         left: 50%;
+        max-width: 100%;
         position: absolute;
         top: 50%;
         transform: translateX(-50%) translateY(-50%);
